fixed user management

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,19 @@
-<div class="about"> Hello AboutComponent! </div>
+<div>
+  <div class="ui segment">
+    <br/>
+    <div class="ui segment">
+      <h1 id="chart-container center Bold">About <b>NamBTS</b></h1>
+
+The <strong>Southwest Africa Blood Transfusion</strong> Service was established in 1963. At that time, testing facilities were not available in Namibia. The institution only collected blood, while testing of blood units was done by the South African Institute for Medical Research until 1986. In cases of blood shortages, additional blood stock was obtained from South Africa.<br/><br/><br/>
+
+On 1 January 1987, a fully operational blood transfusion service was established, and after Namibia’s independence, the service was renamed The Blood Transfusion Service of Namibia (NAMBTS). The premises from which we initially operated were behind the Windhoek Central Hospital in Florence Nightingale Street, at the Blood Bank.<br/><br/><br/>
+
+NAMBTS now has 3 fixed site donation clinics: The NAMBTS Centre at No. 35 Tal Street, Windhoek; United House Clinic in Independence Avenue, Windhoek; and NAMBTS Swakopmund Clinic situated at 4 Ferdinand Stich Street.<br/><br/><br/>
+
+Besides these fixed site clinics, we also operate “mobile clinics” whereby we collect blood at various locations throughout Namibia. We also visit various corporate organizations with these “mobile clinics” where we make it much more convenient for our working community to be able to donate blood.<br/>
+
+    </div>
+  </div>
+
+</div>
+ˀ
