--- a/src/app/user-manager/user-manager.component.html
+++ b/src/app/user-manager/user-manager.component.html
@@ -29,7 +29,7 @@
               <button class="ui icon button" (click)='viewOne(user)' id={{user._id}}>
                 <i class="eye icon green"></i>
               </button>
-              <button class="ui icon button {{user._id}}" id={{user._id}} (click)='resetPasswordDimmer()'>
+              <button class="ui icon button {{user._id}}" id={{user._id}} (click)='resetPasswordDimmer(user)'>
                 <i class="key icon blue resetPasswordButton"></i>
               </button>
 
@@ -44,9 +44,25 @@
           </tr>
         </tbody>
         <tfoot class="full-width">
+           <!-- <tr><th colspan="8">
+                <div class="ui right floated pagination menu">
+                  <a class="icon item">
+                    <i class="left chevron icon"></i>
+                  </a>
+                  <a class="item">1</a>
+                  <a class="item">2</a>
+                  <a class="item">3</a>
+                  <a class="item">4</a>
+                  <a class="icon item">
+                    <i class="right chevron icon"></i>
+                  </a>
+                </div>
+              </th>
+            </tr>
+          -->
+
           <tr>
-            <th></th>
-            <th colspan="7">
+            <th colspan="8">
               <div class="ui right floated small primary labeled icon button" (click)="addUser()">
                 <i class="user icon"></i> Add User
               </div>
@@ -59,6 +75,7 @@
             </th>
           -->
           </tr>
+
         </tfoot>
       </table>
     </div>
@@ -253,6 +270,10 @@
   <div class="ui text loader">Creating User</div>
 </div>
 
+<div class="ui inverted dimmer page changePasswordDimmer">
+  <div class="ui text loader">Changing Password</div>
+</div>
+
     <!-- ===== Add User Form ___ -->
 
 
@@ -267,7 +288,7 @@
       <div class="ui container">
         <div class="content">
           <div class="ui segment">
-            <form action="" [formGroup]="resetForm" novalidate class="ui form">
+            <form action="" [formGroup]="resetForm" novalidate class="ui resetPassword form">
 
               <div id="personalInformation" class="ui segment form-group">
                 <h5 class="ui dividing red header">Reset Password</h5>
@@ -283,7 +304,7 @@
 
                     <div class="twelve ui wide field required">
                       <label>Repeat Password</label>
-                      <input type="password" formControlName="password" name="repeat_password" placeholder="Repeat Password" required>
+                      <input type="password" formControlName="password" name="passwordConfirm" placeholder="Repeat Password" required>
                     </div>
 
                   </div>
@@ -291,7 +312,7 @@
                 <br/>
                 <br/>
 
-                <div class="ui button animated red right large" tabindex="0">
+                <div class="ui button animated red right large" tabindex="0" (click)='changePassword(currentUser._id,resetForm.value)'>
                   <div class="visible content">Submit</div>
                   <div class="hidden content">
                     <i class="right arrow icon"></i>
