added  donation table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
     <a class="blue item" routerLink="/dashboard"><i class="home icon"></i>Dashboard </a>
     <a class="blue item" routerLink="/donate-blood"><i class="theme icon"></i>Donate Blood</a>
     <a class="blue item" routerLink="/blood-bank"><i class="add circle icon"></i>Blood Banks</a>
-    <a class="blue item" routerLink="/camps"><i class="user icon"></i>Blood Camps</a>
+    <a class="blue item" routerLink="/donations"><i class="list icon"></i>Donations</a>
+    <a class="blue item" routerLink="/camps"><i class="hospital icon"></i>Blood Camps</a>
     <a class="blue item" routerLink="/user-manager"><i class="user icon"></i>User Management</a>
     <a class="blue item" routerLink="/about"><i class="info circle icon"></i>About</a>
 
