--- a/src/app/donate-blood/donate-blood.component.html
+++ b/src/app/donate-blood/donate-blood.component.html
@@ -8,33 +8,33 @@
     <div name="static_headers" class="ui sticky">
       <div class="ui four attached menu steps horizontal">
         <a class="active step personalInfoStep" data-tab="personalInfo">
-                <i class="address card icon red"></i>
-                <div class="content">
-                    <div class="title">Personal Information</div>
-                    <!--<div class="description">Choose your shipping options</div>-->
-                </div>
-            </a>
+          <i class="address card icon red"></i>
+          <div class="content">
+            <div class="title">Personal Information</div>
+            <!--<div class="description">Choose your shipping options</div>-->
+          </div>
+        </a>
         <a class="step healthInfoStep" data-tab="healthInfo">
-                <i class="heartbeat icon red"></i>
-                <div class="content">
-                    <div class="title">Health Information</div>
-                    <!--<div class="description">Enter billing information</div>-->
-                </div>
-            </a>
+          <i class="heartbeat icon red"></i>
+          <div class="content">
+            <div class="title">Health Information</div>
+            <!--<div class="description">Enter billing information</div>-->
+          </div>
+        </a>
         <a class="step riskInfoStep" data-tab="riskBeaviour">
-                <i class="warning sign icon red"></i>
-                <div class="content">
-                    <div class="title">Risk Behaviour</div>
-                    <!--<div class="description">Verify order details</div>-->
-                </div>
-            </a>
+          <i class="warning sign icon red"></i>
+          <div class="content">
+            <div class="title">Risk Behaviour</div>
+            <!--<div class="description">Verify order details</div>-->
+          </div>
+        </a>
         <a class="step declarationInfoStep" data-tab="declarationInfo">
-                <i class="edit icon red"></i>
-                <div class="content">
-                    <div class="title">Declaration</div>
-                    <!--<div class="description">Verify order details</div>-->
-                </div>
-            </a>
+          <i class="edit icon red"></i>
+          <div class="content">
+            <div class="title">Declaration</div>
+            <!--<div class="description">Verify order details</div>-->
+          </div>
+        </a>
       </div>
 
     </div>
@@ -50,12 +50,12 @@
               <div class="three ui wide field">
                 <label>Title</label>
                 <select class="ui dropdown" formControlName="title" name="title">
-                    <option value="">Title</option>
-                    <option value="Mr">Mr.</option>
-                    <option value="Mrs">Mrs.</option>
-                    <option value="Ms">Ms.</option>
-                    <option value="Miss">Miss</option>
-                  </select>
+                  <option value="">Title</option>
+                  <option value="Mr">Mr.</option>
+                  <option value="Mrs">Mrs.</option>
+                  <option value="Ms">Ms.</option>
+                  <option value="Miss">Miss</option>
+                </select>
               </div>
 
               <div class="twelve ui wide field required">
@@ -92,57 +92,60 @@
               <div class="three ui wide field">
                 <label>Gender</label>
                 <select class="ui dropdown" formControlName="gender" name="gender">
-                <option value="">Gender</option>
-                <option value="Male"><i class="male icon"></i>Male</option>
-                <option value="Female"><i class="female icon"></i>Female</option>
-              </select>
+                  <option value="">Gender</option>
+                  <option value="Male">
+                    <i class="male icon"></i>Male</option>
+                  <option value="Female">
+                    <i class="female icon"></i>Female</option>
+                </select>
               </div>
 
               <div class="four ui wide field">
                 <label>Language</label>
-                <select class="ui dropdown fluid search" formControlName="language" multiple="" name="language">
-                <option value="">Language</option>
-                <option value="English">English</option>
-                <option value="Oshiwambo">Oshiwambo</option>
-                <option value="Afrikaans">Afrikaans</option>
-                <option value="Otjiherero">Otjiherero</option>
-                <option value="Damara/Nama">Damara/Nama</option>
-                <option value="German">German</option>
-                <option value="Other">Other</option>
-              </select>
+                <select class="ui dropdown fluid search" formControlName="language" multiple="" id="language" name="language">
+                  <option value="">Language</option>
+                  <option value="English">English</option>
+                  <option value="Oshiwambo">Oshiwambo</option>
+                  <option value="Afrikaans">Afrikaans</option>
+                  <option value="Otjiherero">Otjiherero</option>
+                  <option value="Damara/Nama">Damara/Nama</option>
+                  <option value="German">German</option>
+                  <option value="Other">Other</option>
+                </select>
               </div>
               <div class="four ui wide field">
                 <label>Town</label>
                 <select class="ui dropdown fluid search" formControlName="town" name="town">
-                    <option value=""><i class=""></i>Select Town</option>
-                    <option value="Windhoek">Windhoek</option>
-                    <option value="Oshakati">Oshakati</option>
-                    <option value="Otavi">Otavi</option>
-                    <option value="Walvis Bay">Walvis Bay</option>
-                    <option value="Ongwediva">Ongwediva</option>
-                    <option value="Luderitz">Luderitz</option>
-                    <option value="Henties Bay">Henties Bay</option>
-                    <option value="Keetmanshoop">Keetmanshoop</option>
-                    <option value="Outapi">Outapi</option>
-                    <option value="Ondangwa">Ondangwa</option>
-                    <option value="Okahandja">Okahandja</option>
-                    <option value="Otjiwarongo">Otjiwarongo</option>
-                    <option value="Tsumeb">Tsumeb</option>
-                    <option value="Grootfontein">Grootfontein</option>
-                    <option value="Windhoek">Other</option>
-                  </select>
+                  <option value="">
+                    <i class=""></i>Select Town</option>
+                  <option value="Windhoek">Windhoek</option>
+                  <option value="Oshakati">Oshakati</option>
+                  <option value="Otavi">Otavi</option>
+                  <option value="Walvis Bay">Walvis Bay</option>
+                  <option value="Ongwediva">Ongwediva</option>
+                  <option value="Luderitz">Luderitz</option>
+                  <option value="Henties Bay">Henties Bay</option>
+                  <option value="Keetmanshoop">Keetmanshoop</option>
+                  <option value="Outapi">Outapi</option>
+                  <option value="Ondangwa">Ondangwa</option>
+                  <option value="Okahandja">Okahandja</option>
+                  <option value="Otjiwarongo">Otjiwarongo</option>
+                  <option value="Tsumeb">Tsumeb</option>
+                  <option value="Grootfontein">Grootfontein</option>
+                  <option value="Windhoek">Other</option>
+                </select>
               </div>
               <div class="four ui wide field">
                 <label>Population Group</label>
                 <select class="ui dropdown" formControlName="populationGroup" name="populationGroup">
-                <option value="">Population Group</option>
-                <option value="Asian">Asian</option>
-                <option value="African">African</option>
-                <option value="Coloured">Coloured</option>
-                <option value="Caucasian">Caucasian</option>
-                <option value="Indian">Indian</option>
-                <option value="Other">Other</option>
-              </select>
+                  <option value="">Population Group</option>
+                  <option value="Asian">Asian</option>
+                  <option value="African">African</option>
+                  <option value="Coloured">Coloured</option>
+                  <option value="Caucasian">Caucasian</option>
+                  <option value="Indian">Indian</option>
+                  <option value="Other">Other</option>
+                </select>
               </div>
             </div>
           </div>
@@ -294,8 +297,8 @@
 
           </div>
 
-          <div class="ui button animated red right large" (click)="(changePage('.personalInformation'))">
-            <div class="visible content">Next</div>
+          <div class="ui button animated red right large">
+            <div class="visible content"> <a class="step" data-tab="healthInfo"></a> Next</div>
             <div class="hidden content">
               <i class="right arrow icon"></i>
             </div>
@@ -1134,7 +1137,9 @@
                   </td>
                 </tr>
                 <tr>
-                  <td colspan="3"><br/></td>
+                  <td colspan="3">
+                    <br/>
+                  </td>
                 </tr>
 
                 <tr class="positive">
@@ -1174,43 +1179,56 @@
           <h5 class="ui dividing red header">DECLARATION: Please Read this section carefully & agree before submiting the form</h5>
 
           <ul class="ui list large">
-              <li>I have read and understood the information in the brochure "Donate blood for the right reasons".</li>
-              <li>I confirm that to the best of my knowledge and understanding, i have answered all the questions accurately and truthfully and do not consider myself to be involved in any of the described activities that could place me at risk of spreading HIV/AIDS or hepatitis.</li>
-              <li>
-                I understand that any wilfull misrepresentation of the facts could endanger the patients recieving my blood.
-              </li>
-              <li>
-                I'm aware that my blood will be screened for HIV, hepatitis B, hepatitis C, syphilis. I understand that screening tests are not diagnostic and may yield false positive results. I understand that should any of the screening tests give a reactive result, I will be contacted, utilising the information i have supplied, and offered counselling to make an informed decision about further confirmatory testing and management.
-              </li>
-              <li>
-                I am donating my blood on the understanding that it will be utilized by the Blood Transfusion Service of Namibia for the benefit of patients. I accept that blood will be used, at the discretion of Blood Transfusion Services of Namibia; for transfusion, for the preparation of reagents, or for scientific research, the main objective of which is to increase the safety of the blood supply to patients.
-              </li>
-              <li>
-                I understand the blood donation process and the possible risks involved as explained.
-              </li>
-              <li>
-                I confirm that I am over the age of 16 years.
-              </li>
-              <li>
-                I undertake that at any stage there be any reason to deem my blood not safe for use, I will immediately inform the Blood Transfusion Service of Namibia. <a href="tel:061386300">Tel : 061 386 300 </a>
-              </li>
-              <li>
-                I understand that if I should become ill with 14 days of donating blood, or I am diagnosed (by my doctor or clinic) with hepatitis or HIV infection within 6 months of making a blood donation, I must notify the Blood transfusion Service of Namibia immediately <a href="tel:061386300">Tel : 061 386 300 </a>
-              </li>
-            </ul>
-            <div class="ui segment inline field red">
-                <div class="ui checkbox">
-                  <input type="checkbox" name="terms">
-                  <label>I have carefully read and understoo the above declaration and hereby agree to it: </label>
-                </div>
-              </div>
+            <li>I have read and understood the information in the brochure "Donate blood for the right reasons".</li>
+            <li>I confirm that to the best of my knowledge and understanding, i have answered all the questions accurately and
+              truthfully and do not consider myself to be involved in any of the described activities that could place me
+              at risk of spreading HIV/AIDS or hepatitis.</li>
+            <li>
+              I understand that any wilfull misrepresentation of the facts could endanger the patients recieving my blood.
+            </li>
+            <li>
+              I'm aware that my blood will be screened for HIV, hepatitis B, hepatitis C, syphilis. I understand that screening tests are
+              not diagnostic and may yield false positive results. I understand that should any of the screening tests give
+              a reactive result, I will be contacted, utilising the information i have supplied, and offered counselling
+              to make an informed decision about further confirmatory testing and management.
+            </li>
+            <li>
+              I am donating my blood on the understanding that it will be utilized by the Blood Transfusion Service of Namibia for the
+              benefit of patients. I accept that blood will be used, at the discretion of Blood Transfusion Services of Namibia;
+              for transfusion, for the preparation of reagents, or for scientific research, the main objective of which is
+              to increase the safety of the blood supply to patients.
+            </li>
+            <li>
+              I understand the blood donation process and the possible risks involved as explained.
+            </li>
+            <li>
+              I confirm that I am over the age of 16 years.
+            </li>
+            <li>
+              I undertake that at any stage there be any reason to deem my blood not safe for use, I will immediately inform the Blood
+              Transfusion Service of Namibia.
+              <a href="tel:061386300">Tel : 061 386 300 </a>
+            </li>
+            <li>
+              I understand that if I should become ill with 14 days of donating blood, or I am diagnosed (by my doctor or clinic) with
+              hepatitis or HIV infection within 6 months of making a blood donation, I must notify the Blood transfusion
+              Service of Namibia immediately
+              <a href="tel:061386300">Tel : 061 386 300 </a>
+            </li>
+          </ul>
+          <div class="ui segment inline field red">
+            <div class="ui checkbox">
+              <input type="checkbox" name="terms">
+              <label>I have carefully read and understoo the above declaration and hereby agree to it: </label>
+            </div>
+          </div>
 
-              <br/>
+          <br/>
 
           <div class="ui animated button green right large" (click)="(submitForm(donorForm.value))">
             <div class="visible content">Submit Form</div>
             <div class="hidden content">
-                <i class="check circle icon"></i>
+              <i class="check circle icon"></i>
             </div>
           </div>
 
