--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,14 +24,14 @@
               <input type="password" name="password" formControlName="password" placeholder="Password">
             </div>
           </div>
-          <!--<div class="field">
+          <div class="field">
             <label>Role</label>
             <select class="ui dropdown" formControlName="role" name="role">
+              <option value=""><i class="user outline red icon"></i></option>
                 <option value="Doctor"><i class="doctor blue icon"></i>Doctor</option>
-                <option value="Donor"><i class="theme red icon"></i>Donor</option>
                 <option value="Admin"><i class="user green icon"></i>Admin</option>
               </select>
-          </div>-->
+          </div>
           <div class="ui fluid large red submit button"  (click)='login(loginForm.value)'>Login</div>
           <div class="ui error message"></div>
           <br/>
