--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <a class="blue item admin" routerLink="/blood-bank"><i class="add circle icon"></i>Blood Banks</a>
     <a class="blue item" routerLink="/camps"><i class="hospital icon"></i>Blood Camps</a>
     <a class="blue item doctor" routerLink="/donations"><i class="list icon"></i>Donations</a>
-    <a class="blue item admin" routerLink="/user-manager"><i class="user icon"></i>User Management</a>
+    <a class="blue item admin administrator" routerLink="/user-manager"><i class="user icon"></i>User Management</a>
     <a class="blue item" routerLink="/about"><i class="info circle icon"></i>About</a>
 
     <a class="item right">
