--- a/src/app/user-manager/user-manager.component.html
+++ b/src/app/user-manager/user-manager.component.html
@@ -22,7 +22,7 @@
             <td>{{user._id}}</td>
             <td>{{user.firstName}} {{user.lastName}}</td>
             <td>{{user.username}}</td>
-            <td>{{user.entry_date}}</td>
+            <td>{{user.entry_date | date}}</td>
             <td><a href="mailto:{{user.email}}">{{user.email}}</a></td>
             <td>
               <span *ngFor='let per of user.permissions'> {{per}} </span>
