removed invalid command id

--- a/src/app/user-manager/user-manager.component.html
+++ b/src/app/user-manager/user-manager.component.html
@@ -336,11 +336,8 @@
                 <br/>
                 <br/>
 
-                <div class="ui button animated red right large" tabindex="0" (click)='changePassword(currentUser._id,resetForm.value)'>
-                  <div class="visible content">Submit</div>
-                  <div class="hidden content">
-                    <i class="right arrow icon"></i>
-                  </div>
+                <div class="ui button red large" tabindex="0" >
+                  <div class="content" (click)='changePassword(currentUser._id,resetForm.value)'>Submit</div>
                 </div>
 
                 <br/>
