remote camps added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,13 @@
     <a class="blue item doctor" routerLink="/dashboard"><i class="home icon"></i>Dashboard </a>
     <a class="blue item" routerLink="/donate-blood"><i class="theme icon"></i>Donate Blood</a>
     <a class="blue item admin" routerLink="/blood-bank"><i class="add circle icon"></i>Blood Banks</a>
-    <a class="blue item" routerLink="/camps"><i class="hospital icon"></i>Blood Camps</a>
+    <a class="ui dropdown item">
+      <i class="hospital icon"></i>Blood Camps <i class="dropdown icon"></i>
+      <div class="menu">
+        <a class="item" routerLink="/remote"><i class="ambulance icon"></i>Remote Camps</a>
+        <a class="item" routerLink="/camps"><i class="hospital icon"></i>Fixed Camps</a>
+      </div>
+    </a>
     <a class="blue item doctor" routerLink="/donations"><i class="list icon"></i>Donations</a>
     <a class="blue item admin administrator" routerLink="/user-manager"><i class="user icon"></i>User Management</a>
     <a class="blue item" routerLink="/about"><i class="info circle icon"></i>About</a>
@@ -17,7 +23,6 @@
             <div class="item" (click)="logout()">Logout</div>
           </div>
         </a>
-
     </a>
   </div>
   <div class="ui">
