added doctor requests

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
         <a class="item" routerLink="/camps"><i class="hospital icon"></i>Fixed Camps</a>
       </div>
     </a>
+    <a class="blue item doctor" routerLink="/request"><i class="question circle icon"></i>Request Blood</a>
     <a class="blue item doctor" routerLink="/donations"><i class="list icon"></i>Donations</a>
     <a class="blue item admin administrator" routerLink="/user-manager"><i class="user icon"></i>User Management</a>
     <a class="blue item" routerLink="/about"><i class="info circle icon"></i>About</a>
