--- a/src/app/donate-blood/donate-blood.component.html
+++ b/src/app/donate-blood/donate-blood.component.html
@@ -298,7 +298,8 @@
           </div>
 
           <div class="ui button animated red right large">
-            <div class="visible content"> <a class="step" data-tab="healthInfo"></a> Next</div>
+            <div class="visible content">
+              <a class="step" data-tab="healthInfo"></a> Next</div>
             <div class="hidden content">
               <i class="right arrow icon"></i>
             </div>
