--- a/src/app/request/request.component.html
+++ b/src/app/request/request.component.html
@@ -33,6 +33,13 @@
                 <label>Enter Amount (l)</label>
                 <input type="number" formControlName="amount" placeholder="litres">
               </div>
+              <div class="three ui calendar date wide field required" id="date">
+                <label>Date</label>
+                <div class="ui input left icon">
+                  <i class="calendar icon"></i>
+                  <input type="text" id='dateValue' formControlName="date" placeholder="Date">
+                </div>
+              </div>
             </div>
           </div>
           <div class="actions">
