--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
     </a>
     <a class="blue item doctor" routerLink="/request"><i class="question circle icon"></i>Request Blood</a>
     <a class="blue item doctor" routerLink="/donations"><i class="list icon"></i>Donations</a>
-    <a class="blue item admin administrator" routerLink="/user-manager"><i class="user icon"></i>User Management</a>
+    <a class="blue item Super_Admin" routerLink="/user-manager"><i class="user icon"></i>User Management</a>
     <a class="blue item" routerLink="/about"><i class="info circle icon"></i>About</a>
 
     <a class="item right">
