--- a/src/app/donations/donations.component.html
+++ b/src/app/donations/donations.component.html
@@ -20,6 +20,7 @@
             <tr class="ui">
               <th>ID</th>
               <th>Gender</th>
+              <th>Blood Type</th>
               <th>Full Name</th>
               <th>Date of Birth</th>
               <th>Town</th>
@@ -39,6 +40,7 @@
                   <i class="male icon blue" [hidden]='app.personalInfo.gender == "Female"'></i>
                 </button>
               </td>
+              <td>{{app.personalInfo.bloodType || N/A}}</td>
               <td>{{app.personalInfo.title}}. {{app.personalInfo.firstName}} {{app.personalInfo.lastName}}</td>
               <td>{{app.personalInfo.dateOfBirth || 'N/A'}}</td>
               <td>{{app.personalInfo.town}}</td>
